manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: somepod
spec:
  containers:
  - name: app
    image: mhausenblas/simpleservice:0.5.0
    ports:
    - containerPort: 9876
  - name: shell
    image: centos:7
    command:
      - "bin/bash"
      - "-c"
      - "sleep 10000"
